// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Register /> SHOULD match with snapshot WHEN driver 1`] = `
<div>
  <div
    class="makeStyles-whiteBox-35"
  >
    <div
      class="makeStyles-container-34"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        Driver Info
      </h4>
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Email
      </h5>
      <input
        id="email-input"
        name="email"
        type="text"
        value="dkim94"
      />
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Password
      </h5>
      <input
        id="password-input"
        name="password"
        type="password"
        value="123"
      />
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Password Confirm
      </h5>
      <input
        id="password-confirmation-input"
        name="passwordConfirmation"
        type="password"
        value=""
      />
    </div>
    <div
      class="makeStyles-container-34"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        Vehicle Info
      </h4>
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Car Type
      </h5>
      <input
        id="car-type-input"
        name="carType"
        type="text"
        value=""
      />
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Plate No.
      </h5>
      <input
        id="plate-no-input"
        name="plateNo"
        type="text"
        value=""
      />
      <div
        class="makeStyles-button-36"
        fullwidth="false"
        variant="contained"
      >
        Confirm
      </div>
    </div>
  </div>
</div>
`;

exports[`<Register /> SHOULD match with snapshot WHEN rider 1`] = `
<div>
  <div
    class="makeStyles-whiteBox-2"
  >
    <div
      class="makeStyles-container-1"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        Rider Info
      </h4>
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Email
      </h5>
      <input
        id="email-input"
        name="email"
        type="text"
        value="dkim94"
      />
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Password
      </h5>
      <input
        id="password-input"
        name="password"
        type="password"
        value="123"
      />
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Password Confirm
      </h5>
      <input
        id="password-confirmation-input"
        name="passwordConfirmation"
        type="password"
        value=""
      />
      <div
        class="makeStyles-button-3"
        fullwidth="false"
        variant="contained"
      >
        Confirm
      </div>
    </div>
  </div>
</div>
`;
